[package]
name = "PuzzlePiratesGreedyTracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.24.1"
egui = "0.24.1"
regex = "1.10.2"
rfd = "0.12.1"
time = { version = "0.3.31", features = ["parsing", "macros"] }
