[package]
name = "puzzle_pirates_greedy_tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.26.1"
egui = "0.26.2"
regex = "1.10.2"
rfd = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
time = { version = "0.3.31", features = ["parsing", "macros"] }
toml = "0.8.11"

[lints.clippy]
needless_return = "allow"

